<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- application name -->
    <string name="app_name">Homework#2</string>

    <!-- textview -->>
    <string name="countdown">Count Down To Election Day</string>
    <string name="subheader1">สำนักงานคณะกรรมการการเลือกตั้ง</string>
    <string name="subheader2">ELECTION COMMISSION OF THAILAND</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="secondV">60</string>
    <string name="dayV">365</string>
    <string name="hourV">24</string>
    <string name="minuteV">60</string>

    <!-- imageview description -->
    <string name="logodescription">logopic</string>
    <string name="dayloading">loadingpic1</string>
    <string name="hourloading">loadingpic2</string>
    <string name="minuteloading">loadingpic3</string>
    <string name="secondloading">loadingpic4</string>

    <!-- string in button -->
    <string name="next">NEXT</string>
    <string name="check">ตรวจสอบสิทธิเลือกตั้ง</string>

    <!-- hint -->
    <string name="hint">กรอกเลขบัตรประชาชน</string>
</resources>